--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -15,7 +15,7 @@
             <a show-profile="player" href>
                 <img avatar
                      show-profile="player" 
-                     class="app-profile__avatar" 
+                     class="app-avatar app-profile__avatar" 
                      ng-src="{{ player.avatar }}">
             </a>
         </div>
