--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -1,44 +1,3 @@
-<div class="app-head mdl-shadow--2dp mdl-cell mdl-cell--12-col">
-    <div class="app-profile">
-        <div class="app__pull-left">
-            <a show-profile="user" href>
-                <img avatar
-                     class="app-profile__avatar" 
-                     ng-src="{{ user.avatar }}">
-            </a>
-        </div>
-        <div class="app-profile__name">
-            <a show-profile="user" class="app-profile__name" href>{{ user.name }}</a>
-        </div>
-        <div class="app-profile__info app-profile__info--blitz" title="{{ 'blitz'|translate }}">
-            <i class="app-icon material-icons">flash_on</i>
-            <div class="app-profile__info-content app-profile__info-content--points" title="{{ 'points'|translate }} ({{ 'blitz'|translate }})">
-                {{ user.blitz.points }}
-            </div>
-            <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'blitz'|translate }})">
-                <i class="app-icon material-icons">equalizer</i>
-                {{ user.blitz.ranking | number }}
-            </div>
-        </div>
-        <div class="app-profile__info app-profile__info--rapid" title="{{ 'rapid'|translate }}">
-            <i class="app-icon material-icons">timer</i>
-            <div class="app-profile__info-content app-profile__info-content--points" title="{{ 'points'|translate }} ({{ 'rapid'|translate }})">
-                {{ user.rapid.points }}
-            </div>
-            <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'rapid'|translate }})">
-                <i class="app-icon material-icons">equalizer</i>
-                {{ user.rapid.ranking | number }}
-            </div>
-        </div>
-    </div>
-    <div class="app-button__create-game">
-        <button show-modal="#modal-create-game"
-                class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
-            {{ 'create_game' | translate }}
-        </button>
-    </div>
-</div>
-
 <div element class="app-element app-element--small mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col">
     <element-toggle name="'games'" collection="createdGames"></element-toggle>
     <div element-content class="app-element__body">
@@ -177,17 +136,18 @@
      aria-hidden="true"
      data-modal
      modal-close-bg>
-    <div class="app-modal__dialog">
+    <div class="app-modal__dialog app-modal__dialog--head">
+        <a ng-hide="loadGame" href modal-close class="app-modal__close">
+            <i class="material-icons">clear</i>
+        </a>
+        <div class="app-modal__head">
+            <div class="app-profile__card-avatar">
+                <img avatar class="app-avatar app-profile__avatar" ng-src="{{ challenger.avatar }}">
+            </div>
+            {{ challenger.name }}
+        </div>
         <div class="app-modal__content">
             <div class="app-profile app-profile--challenger">
-                <div class="app__pull-left">
-                    <img avatar
-                         class="app-profile__avatar" 
-                         ng-src="{{ challenger.avatar }}">
-                </div>
-                <div class="app-profile__name">
-                    <a class="app-profile__name" href>{{ challenger.name }}</a>
-                </div>
                 <div class="app-profile__info app-profile__info--blitz" title="{{ 'blitz'|translate }}">
                     <i class="app-icon material-icons">flash_on</i>
                     <div class="app-profile__info-content app-profile__info-content--points" title="{{ 'points'|translate }} ({{ 'blitz'|translate }})">
@@ -220,8 +180,16 @@
                     <label for="challenge-color">{{ 'color'|translate }}</label>
                 </div>
                 <div class="app-modal__actions">
-                    <button modal-close type="button" class="mdl-button mdl-button--raised">{{ 'cancel'|translate }}</button>
-                    <button modal-close type="submit" class="mdl-button mdl-button--raised mdl-button--colored">{{ 'ok'|translate }}</button>
+                    <button modal-close 
+                            type="button" 
+                            class="mdl-button mdl-button--raised">
+                        {{ 'cancel'|translate }}
+                    </button>
+                    <button modal-close 
+                            type="submit" 
+                            class="mdl-button mdl-button--raised mdl-button--colored">
+                        {{ 'challenge'|translate }}
+                    </button>
                 </div>
             </form>
         </div>
