--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -48,6 +48,30 @@
   direction: ltr;
 }
 
+.app-navigation__profile-infos {
+  margin-right: 0;
+  margin-left: 8px;
+}
+
+.app-navigation__profile-infos {
+  padding-left: 0;
+  padding-right: 8px;
+}
+
+.app-navigation__profile-infos .app-icon {
+  padding-right: 0;
+  padding-left: 4px;
+}
+
+.app-button--create-game {
+  margin: 0 48px 0 36px;
+}
+
+.app-logo__text {
+  margin-left: 0;
+  margin-right: 56px;
+}
+
 .app-element .app-element__tools {
   float: left;
 }
@@ -84,7 +108,7 @@
 
 .app-search__game-edit {
   right: initial;
-  left: 28px;
+  left: 24px;
 }
 
 .app-form__select-grid select.mdl-cell--6-col {
@@ -134,7 +158,7 @@
 
 .app-modal__close {
   right: inherit;
-  left: 18px;
+  left: 20px;
 }
 
 .app-drawer .mdl-navigation__link .material-icons {
@@ -193,7 +217,7 @@
 .app-settings__done {
   position: absolute;
   left: initial;
-  right: 24px;
+  right: 20px;
 }
 
 .app-profile__info {
@@ -340,11 +364,6 @@
     padding: 0 36px 0 16px;
   }
 
-  .app-button__fixed.app-button__fixed--action {
-    right: initial;
-    left: 84px;
-  }
-
   .app-game__toggle--messages {
     left: initial;
     right: 0;
@@ -356,7 +375,38 @@
   }
 }
 
+@media (min-width: 840px) and (max-width: 1024px) {
+  
+  .app-header__row .app-navigation {
+    padding-left: 0;
+    padding-right: 56px;
+  }
+
+  .app-button--create-game {
+    margin: 0 0 0 28px;
+  }
+}
+
 @media (max-width: 839px) {
+
+  .app-mobile__title {
+    left: initial;
+    right: 56px;
+  }
+
+  .app-logo__text {
+    margin-right: 0;
+  }
+
+  .app-navigation__profile-infos {
+    margin-left: 0;
+    margin-right: 2px;
+  }
+
+  .app-navigation__profile-infos .app-icon {
+    padding-left: 0;
+  }
+
   .app-button__fixed {
     right: initial;
     left: 16px;
@@ -364,7 +414,7 @@
   
   .app-button__fixed.app-button__fixed--action {
     right: initial;
-    left: 64px;
+    left: 84px;
   }
 
   .app-header__mobile-link {
@@ -409,6 +459,11 @@
 }
 
 @media screen and (max-width: 599px) {
+
+  .app-modal__close {
+    right: inherit;
+    left: 16px;
+  }
 
   .app-create-game__choices .app-button {
     margin-left: 2%;
@@ -457,7 +512,7 @@
     border-right: 0;
     border-left: 1px solid rgba(0,0,0,.12);
     left: initial;
-    right: 36px;
+    right: 40px;
   }
 
   .app-game__toggle--phone-archived .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-of-type(2) {
@@ -468,14 +523,14 @@
     border-left: 0;
     border-right: 1px solid rgba(0,0,0,.12);
     right: initial;
-    left: 72px;
+    left: 80px;
   }
 
   .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-of-type(4) {
     border-left: 0;
     border-right: 1px solid rgba(0,0,0,.12);
     right: initial;
-    left: 36px;
+    left: 40px;
   }
 
   .app-game__toggle-head--phone .app-game__toggle-icon--phone:nth-of-type(5) {
