--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -10,7 +10,7 @@
         </a>
         <div class="app-modal__head">
             <div class="app-profile__card-avatar">
-                <img avatar class="app-avatar app-profile__avatar" ng-src="{{ data.avatar }}">
+                <img avatar class="app-avatar" ng-src="{{ data.avatar }}">
             </div>
             {{ data.name }}
         </div>
