--- a/public/css/style-ar.css
+++ b/public/css/style-ar.css
@@ -50,12 +50,12 @@
 
 .app-navigation__profile-infos {
   margin-right: 0;
-  margin-left: 8px;
+  margin-left: 12px;
 }
 
 .app-navigation__profile-infos {
   padding-left: 0;
-  padding-right: 8px;
+  padding-right: 12px;
 }
 
 .app-navigation__profile-infos .app-icon {
@@ -149,6 +149,16 @@
 
 .app-modal__actions {
   text-align: left;
+}
+
+.app-profile__action {
+  right: initial;
+  left: 24px;
+}
+
+.app-profile__card-avatar {
+  left: initial;
+  right: 60px;
 }
 
 .app-profile__avatar {
@@ -400,6 +410,11 @@
 
   .app-navigation__profile-infos {
     margin-left: 0;
+    margin-right: 12px;
+  }
+
+  .app-navigation__profile-infos--blitz {
+    margin-left: 0;
     margin-right: 2px;
   }
 
@@ -460,6 +475,11 @@
 
 @media screen and (max-width: 599px) {
 
+  .app-profile__action {
+    right: initial;
+    left: 8px;
+  }
+
   .app-modal__close {
     right: inherit;
     left: 16px;
@@ -472,6 +492,11 @@
 
   .app-create-game__choices .app-button:nth-of-type(3n + 3) {
     margin-left: 0; 
+  }
+
+  .app-profile__card-avatar {
+    left: initial;
+    right: 36px;
   }
 
   .app-profile__stat:first-child {
