--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,7 @@ a {
 
 .app__action {
   color: #DB4437;
-  font-size: 10vw;
+  font-size: 240px;
 }
 
 .app-header .mdl-menu__container {
@@ -788,7 +788,7 @@ a {
 }
 
 .app-drawer .mdl-navigation__link.mdl-navigation__link {
-  padding: 16px;
+  padding: 12px 16px;
   line-height: 24px;
   font-size: 14px;
   color: #757575;
@@ -807,9 +807,7 @@ a {
   position: relative;
   background: #795548;
   display: inline-block;
-  padding: 12px 0 12px 8px;
-  height: 64px;
-  line-height: 32px;
+  padding: 16px 20px;
 }
 
 .app-drawer .app-layout-title .app-logo {
@@ -901,7 +899,7 @@ a {
 
 .app-create-game__choice-time {
   display: block;
-  font-size: 20px;
+  font-size: 16px;
   margin-bottom: 4px;
 }
 
@@ -914,6 +912,7 @@ a {
 .app-profile__card-avatar {
   position: absolute;
   top: 38px;
+  left: 60px;
   z-index: 10;
 }
 
@@ -2427,6 +2426,11 @@ a {
     display: none !important;
   }
 
+  .app__action {
+    color: #DB4437;
+    font-size: 200px;
+  }
+
   .app-header__mobile {
     display: block !important;
   }
@@ -2438,14 +2442,38 @@ a {
     transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   }
 
+  .app-navigation__profile {
+    height: auto;
+  }
+
+  .app-navigation__profile-user {
+    margin-bottom: 16px;
+  }
+
+  .app-navigation__profile-name {
+    display: inline-block;
+    font-size: 15px;
+    margin-left: 4px;
+    color: #D7CCC8;
+    height: 28px;
+    line-height: 28px;
+    width: 150px;
+    vertical-align: middle;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
   .app-navigation__profile-infos {
     margin-right: 0;
     line-height: 28px;
-    margin-left: 2px;
+    margin-left: 12px;
+    width: 78px;
+    padding-left: 12px;
   }
 
   .app-navigation__profile-infos--blitz {
-    margin-left: 4px;
+    margin-left: 2px;
   }
 
   .app-navigation__profile-infos .app-icon {
@@ -2729,6 +2757,15 @@ a {
     min-height: inherit;
   }
 
+  .app-profile__action {
+    top: 16px;
+    right: 8px;
+  }
+
+  .app__action {
+    font-size: 160px;
+  }
+
   .app-modal__close {
     right: 16px;
     top: 16px;
@@ -2979,6 +3016,11 @@ a {
     text-align: center;
   }
 
+  .app-profile__card-avatar {
+    top: 34px;
+    left: 36px;
+  }
+
   .app-profile__stat {
     width: calc(33% - 8px);
     margin: 4px;
@@ -3016,6 +3058,8 @@ a {
     font-size: 20px;
     margin-bottom: 8px;
   }
+
+
 }
 
 @media screen and (max-width: 479px) {
@@ -3075,10 +3119,20 @@ a {
     height: 40px;
   }
 
+  .app-profile--challenger {
+    height: auto;
+    margin-top: 20px;
+  }
+
   .app-profile__name {
     line-height: 15px;
     font-size: 15px;
     margin-bottom: 5px;
+  }
+
+  .app-profile__card-avatar .app-avatar {
+    width: 50px;
+    height: 50px;
   }
 
   .app-avatar {
@@ -3097,6 +3151,10 @@ a {
 
   .app-profile .app-profile__info-content--ranking {
     display: none;
+  }
+
+  .app-profile.app-profile--challenger .app-profile__info-content--ranking {
+    display: initial;
   }
 
   .app-profile--game {
