--- a/public/index.ejs
+++ b/public/index.ejs
@@ -90,10 +90,10 @@
              
             <header class="app-header mdl-layout__header">
                 <div class="app-header__row mdl-layout__header-row">
-                    <div class="app-title app-logo">
+                    <a href="/" class="app-title app-logo">
                         <span class="app-logo__icon"></span>
                         <span class="app-logo__text" ng-bind="'name'|translate"></span>
-                    </div>
+                    </a>
 
                     <!-- Add spacer, to align navigation to the right in desktop -->
                     <div class="app-header-spacer mdl-layout-spacer"></div>
