--- a/public/index.ejs
+++ b/public/index.ejs
@@ -136,14 +136,14 @@
                                show-profile="user" 
                                class="app-navigation__profile">
                                 <div class="app-navigation__profile-infos app-navigation__profile-infos--blitz"
-                                     title="{{ 'points'|translate }} ({{ 'blitz'|translate }})">
+                                     title="{{ 'blitz'|translate }}">
                                     <i class="app-icon material-icons">flash_on</i>
                                     <span class="app-navigation__profile-infos-points">
                                         {{ user.blitz.points }}
                                     </span>
                                 </div>
                                 <div class="app-navigation__profile-infos" 
-                                     title="{{ 'points'|translate }} ({{ 'rapid'|translate }})">
+                                     title="{{ 'rapid'|translate }}">
                                     <i class="app-icon material-icons">timer</i>
                                     <span class="app-navigation__profile-infos-points">
                                         {{ user.rapid.points }}
